--- a/active-learning.tex
+++ b/active-learning.tex
@@ -385,7 +385,7 @@ amostragem por incerteza, vista na seção anterior.
 % is considered.
 
 
-\subsection{\eer}
+\subsection{\Eer}
 A estratégia de redução de erro adotada neste trabalho é baseada no
 \ing{exemplo de redução de entropia}{entropy reduction example} proposto por
 \cite{conf/ijcai/GuoG07}.
@@ -465,6 +465,7 @@ $sim(\bm{x},\bm{u})$ pela fórmula \ref{eq:sim}.
 A ordem de complexidade é $\mathcal{O}(1)$, se os $|\mathcal{U}|^2$ cálculos de distância forem
 devidamente armazenados em memória para futuro acesso rápido.
 
+\ano{explicar como empreguei mahalanobis}
 \ano{expoentes ponderadores nem são mencionados}
 
 \ano{feature: dependente de algoritmo de aprendizado}
