--- a/macros.tex
+++ b/macros.tex
@@ -21,7 +21,8 @@
 
 \newcommand{\ing}[2]{\emph{#1}\footnote{\textit{#2}}}
 \newcommand{\novo}[1]{\emph{#1}}
-\newcommand{\eer}{Redução do Erro Esperado\xspace}
+\newcommand{\eer}{redução do erro esperado\xspace}
+\newcommand{\Eer}{Redução do erro esperado\xspace}
 \newcommand{\elms}{\textit{máquinas extremas}\xspace}
 \newcommand{\elm}{\textit{máquina extrema}\xspace}
 \newcommand{\svm}{máquina de vetores de suporte\xspace}
