--- a/metodologia.tex
+++ b/metodologia.tex
@@ -177,6 +177,7 @@ Sendo ele dado por apenas um valor para todos os exemplos, não existe
 a possibilidade de se calcular uma ALC.
 Assim, deve ser definido um momento na curva de aprendizado como sendo o orçamento
 disponível e deve ser avaliado o modelo induzido até então.
+\green{baseline p/ AccBal é $1/|Y|$ ?}
 Nesse caso, foi adotada a acurácia balanceada \citep{journals/bmcbi/MassoV10}
 por ter um significado mais próximo
 da usual medida de acurácia quando se comparam classificadores.
@@ -209,7 +210,10 @@ whereas 10-fold CV is more accurate for model selection.
 }
 
 \subsection{Teste estatístico}
-\ano{programa do Covões}
+\ano{citar programa do Covões}
+
+explicar critério de empate não arbitrário que inventei, pois na construção da árvore de nichos
+haveria confusão se adotasse apenas os vencedores, por causa da existência de estratégias similares.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
