--- a/introducao.tex
+++ b/introducao.tex
@@ -26,7 +26,7 @@ são aplicáveis apenas no cenário em que o acervo \ano{acervo?}
 já está construído.
 Consequentemente, a escolha do processo de amostragem,
 denominado \textit{aprendizado ativo},
-precede a determinação do melhor o algoritmo de aprendizado.
+precede a determinação do algoritmo de aprendizado.
 
 Da mesma forma que existe o problema da escolha do algoritmo de aprendizado
 mais apropriado, existe o problema da escolha da melhor estratégia de
@@ -36,24 +36,25 @@ da estratégia escolhida só pode ser determinado após ter-se incorrido
 em custos financeiros com a atividade de supervisão realizada
 frequentemente por um humano - chamado genericamente de \textit{oráculo}.
 
-Está implícita na busca pela qualidade dos dados a economia em tempo de processamento e
+Está implícita na seleção de dados de qualidade a economia em tempo de processamento e
 de supervisão, dado que apenas a parcela reduzida de exemplos mais relevantes
-é enviada para a análise do oráculo.
-A quantidade global de dados, por exemplo, duplica a cada dois anos
-\citep{journals/sigkdd/ZliobaiteBGGGMM12} apontando
-para uma tendência que torna intratável uma supervisão exaustiva em muitas aplicações.
+é enviada para a análise do oráculo e processada pelo algoritmo de aprendizado.
+Como agravante, a quantidade global de dados duplica a cada dois anos
+\citep{journals/sigkdd/ZliobaiteBGGGMM12}, apontando
+para uma tendência que torna intratável a supervisão e aprendizado exaustivos
+em muitas aplicações.
 
 Por outro lado, aplicações em que o oráculo é um processo químico, por exemplo,
 envolvem consumo de material ou a destruição dos exemplos consultados.
 Apesar de não envolver a manutenção dispendiosa de um oráculo humano
 e possivelmente não requerer uma filtragem massiva de exemplos,
 cada consulta tem um custo associado.
-cada consulta 
 
 
 
-\citep{journals/jmlr/GuyonCDL11} tem o gráfico mostrando muita gente usando unc sampling
-e ninguém(?) usando DWTU
+
+\ano{\citep{journals/jmlr/GuyonCDL11} tem o gráfico mostrando muita gente usando unc sampling
+e ninguém(?) usando DWTU}
 
 \esb{apresenta o custo de rotulação como motivação;
 explicita que ninguém compara estratégias; comenta possiveis deficiencias ou
@@ -84,7 +85,7 @@ O cenário adotado neste trabalho é o baseado em \pool.
 Especificamente, há as seguintes restrições de escopo:
 \begin{itemize}
  \item consulta pela classe (não por valores de atributos, por exemplo);
-monorrótulo;
+ \item monorrótulo;
  \item distribuição estacionária;
  \item custos uniformes;
  \item oráculo único e consistente (sempre a mesma resposta para um mesmo ex.);
@@ -96,11 +97,11 @@ verossimilhança com aplicações reais:
  \item consulta \ing{um a um}{on-line};
  \item toda\footnote{Exceto exemplos duplicados.} a base de dados original é utilizada no
    processo de validação cruzada\footnote{Algumas estratégias fazem uma amostragem interna,
-   que se renova a cada consulta.}.
+   que se renova a cada consulta.}; e,
  \item um rótulo inicial por classe - simulando
-   \ing{aprendizado guiado}{guided learning} \citep{conf/kdd/AttenbergP10};
+   \ing{aprendizado guiado}{guided learning} \citep{conf/kdd/AttenbergP10}.
 \end{itemize}
-Outra característica está no não conhecimento do orçamento disponível por parte das estratégias implementadas.
+Outra característica está no desconhecimento do orçamento disponível por parte das estratégias implementadas.
 Isso implica na geração de sequências de consultas não necessariamente ótimas.
 Essa possibilidade, mais teórica do que prática,
 decorre de o fato do processo ativo de amostragem não ser uma
