tables exaustivas, com alguns NAs

--- a/apendice2.tex
+++ b/apendice2.tex
@@ -10,3 +10,69 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 \input classifsTab
 
 \section{Acurácia das estratégias}
+\subsection{SVM}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaSVM
+\end{landscape}\clearpage}
+
+\afterpage{\clearpage\begin{landscape}
+\input stratsBalAccSVM
+\end{landscape}\clearpage}
+
+\subsection{NB}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaNB
+\end{landscape}\clearpage}
+
+\afterpage{\clearpage\begin{landscape}
+\input stratsBalAccNB
+\end{landscape}\clearpage}
+
+\subsection{C4.5}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaC4.5
+\end{landscape}\clearpage}
+
+\afterpage{\clearpage\begin{landscape}
+\input stratsBalAccC4.5
+\end{landscape}\clearpage}
+
+\subsection{5NN}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappa5NN
+\end{landscape}\clearpage}
+
+\afterpage{\clearpage\begin{landscape}
+\input stratsBalAcc5NN
+\end{landscape}\clearpage}
+
+\subsection{IELM}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaIELM
+\end{landscape}\clearpage}
+
+\afterpage{\clearpage\begin{landscape}
+\input stratsBalAccIELM
+\end{landscape}\clearpage}
+
+\subsection{CIELM}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaCIELM
+\end{landscape}\clearpage}
+
+\afterpage{\clearpage\begin{landscape}
+\input stratsBalAccCIELM
+\end{landscape}\clearpage}
+
+\subsection{VFDT}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaVFDT
+\end{landscape}\clearpage}
+
+\afterpage{\clearpage\begin{landscape}
+\input stratsBalAccVFDT
+\end{landscape}\clearpage}
+
+% \input stratsALCKappaFriedSVM
+% 
+% \input stratsBalAccFriedSVM
