--- a/classifsTab.tex
+++ b/classifsTab.tex
@@ -1,8 +1,7 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{BalancedAcc: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
-\begin{center}
-\begin{tabular}{lc|c|c|c|c|c|c|c}
+\caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
+\begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & SVM & 5NN & C4.5 & VFDT & NB & IELM & CIELM & nintera\\ \hline 1-abalone 3class &   0.58 & \textcolor{black}{\textbf{  0.60}} & \textcolor{black}{\textbf{  0.60}} & \underline{\textcolor{blue}{\textbf{  0.61}}} &   0.57 &   0.59 &   0.57 & \textcolor{red}{\textbf{ -2.00}} \\
 2-arcene & \underline{\textcolor{blue}{\textbf{  0.87}}} & \textcolor{black}{\textbf{  0.68}} &   0.65 &   0.66 & \textcolor{black}{\textbf{  0.68}} &   0.50 & \textcolor{black}{\textbf{  0.68}} & \textcolor{red}{\textbf{ -2.00}} \\
 3-artificial charact... & \textcolor{black}{\textbf{  0.55}} & \underline{\textcolor{blue}{\textbf{  0.58}}} &   0.32 &   0.36 &   0.30 &   0.45 &   0.29 & \textcolor{red}{\textbf{ -2.00}} \\
@@ -35,14 +34,12 @@
 30-iris & \textcolor{black}{\textbf{  0.96}} &   0.94 &   0.79 &   0.86 &   0.91 & \underline{\textcolor{blue}{\textbf{  0.97}}} &   0.95 & \textcolor{red}{\textbf{ -2.00}} \\
 31-kr vs kp & \textcolor{black}{\textbf{  0.95}} & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.89 &   0.85 &   0.88 &   0.94 &   0.94 & \textcolor{red}{\textbf{ -0.82}} \\
 32-leaf &   0.60 &   0.61 &   0.43 &   0.48 & \underline{\textcolor{blue}{\textbf{  0.73}}} &   0.21 & \textcolor{black}{\textbf{  0.69}} & \textcolor{red}{\textbf{ -2.00}} \\
-33-leukemia haslinger &   0.81 &   0.74 &   0.79 &   0.77 & \underline{\textcolor{blue}{\textbf{  0.89}}} &   0.50 & \textcolor{black}{\textbf{  0.88}} & \textcolor{red}{\textbf{ -2.00}} \\\end{tabular}
-\label{tab:balaccClassif0}
+33-leukemia haslinger &   0.81 &   0.74 &   0.79 &   0.77 & \underline{\textcolor{blue}{\textbf{  0.89}}} &   0.50 & \textcolor{black}{\textbf{  0.88}} & \textcolor{red}{\textbf{ -2.00}} \\\end{tabular}\label{tab:balaccClassif0}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{BalancedAcc: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
-\begin{center}
-\begin{tabular}{lc|c|c|c|c|c|c|c}
+\caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
+\begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & SVM & 5NN & C4.5 & VFDT & NB & IELM & CIELM & nintera\\ \hline 34-mammographic mass & \textcolor{red}{\textbf{  0.74}} & \textcolor{black}{\textbf{  0.81}} &   0.80 &   0.78 &   0.79 &   0.80 &   0.80 & \underline{\textcolor{blue}{\textbf{  0.82}}} \\
 35-mfeat fourier & \underline{\textcolor{blue}{\textbf{  0.80}}} &   0.75 &   0.74 & \textcolor{red}{\textbf{  0.73}} &   0.76 &   0.74 &   0.76 & \textcolor{black}{\textbf{  0.78}} \\
 36-molecular promotor... &   0.80 &   0.80 &   0.61 &   0.63 & \textcolor{black}{\textbf{  0.90}} & \underline{\textcolor{blue}{\textbf{  0.92}}} & \textcolor{black}{\textbf{  0.90}} & \textcolor{red}{\textbf{ -2.00}} \\
@@ -75,14 +72,12 @@
 63-statlog australian... &   0.80 &   0.84 & \textcolor{blue}{\textbf{  0.86}} &   0.83 &   0.75 &   0.50 & \textcolor{blue}{\textbf{  0.86}} & \textcolor{red}{\textbf{ -2.00}} \\
 64-statlog german cre... &   0.61 &   0.64 & \textcolor{black}{\textbf{  0.66}} &   0.64 & \underline{\textcolor{blue}{\textbf{  0.68}}} &   0.55 &   0.54 & \textcolor{red}{\textbf{ -2.00}} \\
 65-statlog heart &   0.75 &   0.77 &   0.80 &   0.76 & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.50 & \textcolor{black}{\textbf{  0.83}} & \textcolor{red}{\textbf{ -2.00}} \\
-66-statlog image segm... & \textcolor{blue}{\textbf{  0.96}} & \textcolor{blue}{\textbf{  0.96}} &   0.81 &   0.86 &   0.78 &   0.61 &   0.79 & \textcolor{red}{\textbf{ -2.00}} \\\end{tabular}
-\label{tab:balaccClassif1}
+66-statlog image segm... & \textcolor{blue}{\textbf{  0.96}} & \textcolor{blue}{\textbf{  0.96}} &   0.81 &   0.86 &   0.78 &   0.61 &   0.79 & \textcolor{red}{\textbf{ -2.00}} \\\end{tabular}\label{tab:balaccClassif1}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{BalancedAcc: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
-\begin{center}
-\begin{tabular}{lc|c|c|c|c|c|c|c}
+\caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
+\begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & SVM & 5NN & C4.5 & VFDT & NB & IELM & CIELM & nintera\\ \hline 67-statlog landsat sa... & \underline{\textcolor{blue}{\textbf{  0.89}}} & \textcolor{black}{\textbf{  0.83}} &   0.65 &   0.74 &   0.79 &   0.17 &   0.80 & \textcolor{red}{\textbf{ -2.00}} \\
 68-statlog vehicle si... & \textcolor{black}{\textbf{  0.70}} & \underline{\textcolor{blue}{\textbf{  0.72}}} &   0.68 &   0.69 &   0.47 &   0.26 &   0.46 & \textcolor{red}{\textbf{ -2.00}} \\
 69-steel plates fault... & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} &   0.98 &   0.98 &   0.89 &   0.50 &   0.99 & \textcolor{red}{\textbf{ -2.00}} \\
@@ -95,7 +90,7 @@
 76-thyroid sick euthy... & \textcolor{black}{\textbf{  0.77}} & \underline{\textcolor{blue}{\textbf{  0.93}}} &   0.56 &   0.58 &   0.69 &   0.52 &   0.66 & \textcolor{red}{\textbf{ -2.00}} \\
 77-tic tac toe & \underline{\textcolor{blue}{\textbf{  0.98}}} &   0.81 &   0.67 &   0.71 &   0.63 & \textcolor{black}{\textbf{  0.87}} &   0.63 & \textcolor{red}{\textbf{ -2.00}} \\
 78-turkiye student &   0.28 & \textcolor{black}{\textbf{  0.31}} &   0.24 &   0.25 &   0.29 & \underline{\textcolor{blue}{\textbf{  0.34}}} &   0.25 & \textcolor{red}{\textbf{ -2.00}} \\
-79-twonorm &   0.95 &   0.85 & \textcolor{blue}{\textbf{  0.98}} &   0.94 &   0.97 & \textcolor{blue}{\textbf{  0.98}} &   0.97 & \textcolor{red}{\textbf{ -2.00}} \\
+79-twonorm &   0.95 &   0.85 & \textcolor{blue}{\textbf{  0.98}} &   0.94 &   0.97 & \textcolor{blue}{\textbf{  0.98}} &   0.97 & \textcolor{red}{\textbf{ -1.88}} \\
 80-user knowledge &   0.67 & \textcolor{black}{\textbf{  0.77}} &   0.47 & \textcolor{red}{\textbf{  0.45}} &   0.65 & \underline{\textcolor{blue}{\textbf{  0.83}}} &   0.76 &   0.63 \\ \hline
 81-vertebra column 2c &   0.79 &   0.75 &   0.78 &   0.74 & \textcolor{black}{\textbf{  0.80}} &   0.50 & \underline{\textcolor{blue}{\textbf{  0.81}}} & \textcolor{red}{\textbf{  0.49}} \\
 82-vertebra column 3c &   0.73 &   0.76 &   0.75 &   0.72 & \textcolor{black}{\textbf{  0.77}} &   0.33 & \underline{\textcolor{blue}{\textbf{  0.79}}} & \textcolor{red}{\textbf{ -2.00}} \\
@@ -110,7 +105,6 @@
 91-wilt &   0.67 & \underline{\textcolor{blue}{\textbf{  0.89}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.50}} &   0.66 &   0.51 &   0.60 & \textcolor{black}{\textbf{  0.81}} \\
 92-wine &   0.96 &   0.91 &   0.93 &   0.95 & \textcolor{black}{\textbf{  0.97}} &   0.41 & \underline{\textcolor{blue}{\textbf{  0.98}}} & \textcolor{red}{\textbf{ -2.00}} \\
 93-wine quality white... & \underline{\textcolor{blue}{\textbf{  0.37}}} &   0.34 &   0.29 &   0.29 & \textcolor{black}{\textbf{  0.36}} &   0.23 & \textcolor{red}{\textbf{  0.20}} &   0.31 \\
-94-yeast 4class &   0.57 &   0.61 & \textcolor{black}{\textbf{  0.64}} &   0.61 &   0.58 & \underline{\textcolor{blue}{\textbf{  0.67}}} &   0.60 & \textcolor{red}{\textbf{ -2.00}} \\ \hline\end{tabular}
-\label{tab:balaccClassif2}
+94-yeast 4class &   0.57 &   0.61 & \textcolor{black}{\textbf{  0.64}} &   0.61 &   0.58 & \underline{\textcolor{blue}{\textbf{  0.67}}} &   0.60 & \textcolor{red}{\textbf{ -2.00}} \\ \hline\end{tabular}\label{tab:balaccClassif2}
 \end{center}
 \end{table}
